I finally got liquibase to work. To get everything setup start from a fresh database

--- a/webfiles/backend/db-changelogs/root.yaml
+++ b/webfiles/backend/db-changelogs/root.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
-  - includeAll:
-      path: "./"
+  - include:
+      file: ../webfiles/backend/db-changelogs/init.sql
+  - includeAll: 
+      path: ../webfiles/backend/db-changelogs/tables/
